tests/rosetta/out/Elixir/apply-a-callback-to-an-array-2.error
run: exit status 1
** (SyntaxError) invalid syntax found on /tmp/apply-a-callback-to-an-array-2.exs:12:11:
    error: unexpected ( after alias Map. Function names and identifiers in Elixir start with lowercase characters or underscore. For example:

        hello_world()
        _starting_with_underscore()
        numb3rs_are_allowed()
        may_finish_with_question_mark?()
        may_finish_with_exclamation_mark!()

    Unexpected token: (
    │
 12 │ 	@spec Map(list(integer()), (integer() -> integer())) :: list(integer())
    │           ^
    │
    └─ /tmp/apply-a-callback-to-an-array-2.exs:12:11
    (elixir 1.18.3) lib/code.ex:1525: Code.require_file/2
